<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColorWhite">

    <TextView
        android:id="@+id/verifyAccountTextView"
        android:layout_width="215dp"
        android:layout_height="56dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="91dp"
        android:text="@string/verifyAccount"
        android:textAlignment="center"
        android:textColor="@color/navyTextFont"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verifyAccountTextViewBlurb"
        android:layout_width="224dp"
        android:layout_height="44dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="91dp"
        android:text="@string/verifyAccountBlurb"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyAccountTextView" />

    <ImageView
        android:id="@+id/verifyAccountImageView"
        android:layout_width="319dp"
        android:layout_height="290dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyAccountTextViewBlurb"
        app:srcCompat="@drawable/VerifyAccount" />

    <ImageButton
        android:id="@+id/VerifyAccountImageButton"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginStart="325dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="46dp"
        android:background="@color/BackgroundColorWhite"
        android:foregroundTint="#000000"
        android:tint="@color/BlackText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


    <Button
        android:id="@+id/verifyAccountNextButton"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/roundedbutton"
        android:text="Next"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/verifyAccountQuestionTextView"
        android:layout_width="132dp"
        android:layout_height="31dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="52dp"
        android:text="@string/verifyAccountCode"
        app:layout_constraintBottom_toTopOf="@+id/verifyAccountNextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyAccountVerificationButton1" />

    <Button
        android:id="@+id/verifyAccountCodeButton"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/BackgroundColorWhite"
        android:text="@string/verifyAccountSendCodeAgain"
        android:textColor="@color/linkBlue"
        app:layout_constraintBottom_toTopOf="@+id/verifyAccountNextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toEndOf="@+id/verifyAccountQuestionTextView"
        app:layout_constraintTop_toBottomOf="@+id/verifyAccountVerificationButton3" />

    <EditText
        android:id="@+id/verifyAccountVerificationButton1"
        android:layout_width="64dp"
        android:layout_height="65dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/verifyAccountDashHint"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/verifyAccountVerificationButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyAccountImageView" />

    <EditText
        android:id="@+id/verifyAccountVerificationButton2"
        android:layout_width="64dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:hint="@string/verifyAccountDashHint"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/verifyAccountVerificationButton1"
        app:layout_constraintTop_toBottomOf="@+id/verifyAccountImageView" />

    <EditText
        android:id="@+id/verifyAccountVerificationButton3"
        android:layout_width="64dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:hint="@string/verifyAccountDashHint"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/verifyAccountVerificationButton2"
        app:layout_constraintTop_toBottomOf="@+id/verifyAccountImageView" />

    <EditText
        android:id="@+id/verifyAccountVerificationButton4"
        android:layout_width="64dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="54dp"
        android:hint="@string/verifyAccountDashHint"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/verifyAccountVerificationButton3"
        app:layout_constraintTop_toBottomOf="@+id/verifyAccountImageView" />


</androidx.constraintlayout.widget.ConstraintLayout>